--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "devDependencies": {
     "@types/react-dom": "^16.0.4",
     "@types/react-redux": "^5.0.15",
+    "@types/redux-first-router": "^1.10.2",
+    "@types/redux-first-router-link": "^1.4.3",
     "@types/redux-logger": "^3.0.5",
     "cache-loader": "^1.2.0",
     "fork-ts-checker-webpack-plugin": "^0.3.0",
@@ -37,11 +39,14 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "history": "^4.7.2",
     "immer": "^1.0.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-first-router": "0.0.16-next",
+    "redux-first-router-link": "^1.4.2",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1"
   },
