--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/react-dom": "^16.0.4",
     "@types/react-redux": "^5.0.15",
+    "@types/redux-actions": "^2.2.4",
     "@types/redux-first-router": "^1.10.2",
     "@types/redux-first-router-link": "^1.4.3",
     "@types/redux-logger": "^3.0.5",
@@ -45,6 +46,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-actions": "^2.3.0",
     "redux-first-router": "0.0.16-next",
     "redux-first-router-link": "^1.4.2",
     "redux-thunk": "^2.2.0",
