--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/react-dom": "^16.0.4",
+    "@types/react-loadable": "^5.3.3",
     "@types/react-redux": "^5.0.15",
     "@types/redux-actions": "^2.2.4",
     "@types/redux-first-router": "^1.10.2",
@@ -44,6 +45,7 @@
     "immer": "^1.0.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-loadable": "^5.3.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-actions": "^2.3.0",
