--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "./public/",
     "module": "commonjs",
     "target": "es5",
-    "lib": ["es2015", "dom"],
+    "lib": ["es2015", "es2017.object", "dom"],
     "jsx": "react",
     "strict": true,
     "noUnusedLocals": true,
