--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-router-dom": "^4.2.5",
     "@types/redux-actions": "^2.2.4",
     "@types/redux-logger": "^3.0.5",
+    "@types/redux-persist": "^4.3.1",
     "cache-loader": "^1.2.0",
     "fork-ts-checker-webpack-plugin": "^0.3.0",
     "html-webpack-plugin": "^2.30.1",
@@ -49,6 +50,7 @@
     "redux": "^3.7.2",
     "redux-actions": "^2.3.0",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^5.9.1",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "tslib": "^1.9.0"
